# Cifrovization_NEFT

./: .gitignore  CMakeLists.txt  README.md
Code/: requirements.txt
Code/.streamlit/: config.toml
Code/desktop/: build_exe.bat  wabt_desktop.py  wabt_viewer.spec
Code/include/: DegradationEngine.h  DegradationTypes.h  PeriodDetector.h  Regression.h
Code/scripts/: extract_xlsx.py  plot_wabt.py  run_pipeline.py  run_three_solutions.py
Code/sql/: schema.sql
Code/src/: DegradationEngine.cpp  PeriodDetector.cpp  Regression.cpp  main.cpp
Code/ui/: app.py
Solution/: README.txt  data_1.xlsx  data_2.xlsx
tests/: test_degradation.cpp
